# Python-APIs

./: .env.example  .flake8  .gitignore  .pylintrc  CHANGELOG.md  README.md  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/: copilot-instructions.md  pull_request_template.md
.github/scripts/: bump-version.sh
.github/skills/plan-issue/: SKILL.md
.github/skills/pr-comments/: SKILL.md
.github/skills/pr-create/: SKILL.md
.github/workflows/: Test and publish.yml  test and lint.yml
docs/adr/: 0001-ad-response-modernization.md
docs/migration/: ad-batch-read-v2.md  ad-get-v2.md  ad-multivalue-dual-form.md  ad-operation-envelope.md  v-major-upgrade.md
examples/: batch_read_v2.py  get_v2.py  membership_apis.py  multivalue_dual_form.py
python_apis/ad_api/: __init__.py  ad_api.py
python_apis/ad_api/models/: __init__.py  ad_user.py
src/apis/: __init__.py  ad_api.py  sql_api.py
src/models/: __init__.py  ad_user.py  base.py
src/python_apis/: __init__.py  deprecation.py  discovery.py  migration_examples.py
src/python_apis/apis/: __init__.py  ad_api.py  jira_api.py  sql_api.py
src/python_apis/models/: __init__.py  ad_get.py  ad_group.py  ad_responses.py  ad_user.py  multivalue.py  sap_employee.py
src/python_apis/schemas/: __init__.py  ad_group_schema.py  ad_ou_schema.py  ad_user_schema.py
src/schemas/: __init__.py
src/services/: ad_user_attributes.json  ad_user_attributes_extended.json  ad_user_service.py
src/tests/: test_deprecation.py  test_discovery.py  test_migration_examples.py
tests/: test_example.py
(+27 files in other folders)
