[project]
name = 'python_apis'
version = '0.0.1'
authors = [
  { name='Björn Gunnarsson', email='bjorngun@kopavogur.is' },
]
description = 'A package that contains a small collection of easy to use API to common services'
readme = 'README.md'
requires-python = '>=3.11'
classifiers = [
    'Development Status :: 1 - Planning',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.11',
    'License :: OSI Approved :: MIT License',
    'Operating System :: OS Independent',
]
dependencies = [
  'ldap3 >= 2.9.1, < 3',
]

[project.optional-dependencies]
test = [
  'pytest >= 7.0.0, < 8',
  "pytest-cov[all]"
]

[project.urls]
'Homepage' = 'https://github.com/Kopavogur/Python-APIs'
'Bug Tracker' = 'https://github.com/Kopavogur/Python-APIs/issues'

[build-system]
requires = ['setuptools>=43.0.0', 'wheel']
build-backend = 'setuptools.build_meta'
